revert column resizing and prevent wrapping so social buttons are center aligned

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -999,6 +999,7 @@ ul.social-buttons li a:active {
 
 ul.legal-links {
     padding-top: 20px;
+    white-space: nowrap;
 }
 
 .portfolio-modal .modal-content {
